# pro_office_calc

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  build_deb.sh  build_local.sh  create_tarball.sh  procalc.desktop  procalc.icns  procalc.sh  run.bat  run.sh  run_local.sh
assets/: apex_garbled.xcf  big_screen.xcf  bricks_and_metal.xcf  ceiling.xcf  crate.xcf  dark_bricks.xcf  dark_wood.xcf  dirty_metal.xcf  explosion.xcf  grass.xcf  grey_bricks.xcf  hedge.xcf  light_bricks.xcf  light_wood.xcf  metal_ceiling.xcf  metal_floor.xcf  metal_wall.xcf  monitor_front.xcf  rock.xcf  rugged_bricks.xcf  server_rack_side.xcf  servers_top.xcf  slime.xcf  slimy_bricks.xcf  slimy_bricks_.xcf  stone.xcf  stone_slabs.xcf  water.xcf  white_paint_light.xcf
assets/performance/: 1.ps  10.ps  11.ps  12.ps  13.ps  2.ps  3.ps  4.ps  5.ps  6.ps  7.ps  8.ps  9.ps  performance.txt
cmake/: FindTinyXml2.cmake  externalGoogleTest.cmake  externalTinyXml2.cmake  osx_bundle.cmake
cmake/modules/: FindGooglePerfTools.cmake  FindTinyXML2.cmake
data/its_raining_tetrominos/: troubleshooter1.html  troubleshooter2.html
debian/: .gitignore  changelog  control  copyright  rules  watch
debian/ppa/: control
dependencies/: CMakeLists.txt
release/: README.md  build_deb.sh  create_tarball.sh  functions.sh  release.sh
src/: animation.cpp  animation.hpp  app_config.cpp  app_config.hpp  app_state.cpp  app_state.hpp  application.cpp  application.hpp  button_grid.cpp  button_grid.hpp  calculator.cpp  calculator.hpp  calculator_widget.cpp  calculator_widget.hpp  console_widget.cpp  console_widget.hpp  effects.cpp  effects.hpp  evasive_button.cpp  evasive_button.hpp  event.hpp  event_system.cpp  event_system.hpp  exception.cpp  exception.hpp  exploding_button.cpp  exploding_button.hpp  f_main_spec_factory.cpp  f_main_spec_factory.hpp  file_exception.hpp  fragment.cpp  fragment.hpp  fragment_factory.cpp  fragment_factory.hpp  fragment_spec.cpp  fragment_spec.hpp  main.cpp  main_state.hpp  main_window.cpp  main_window.hpp  (+19 more)
src/fragments/: calculator_fragment.cpp  calculator_fragment.hpp  main_fragment.cpp  main_fragment.hpp  normal_calculator_fragment.cpp  normal_calculator_fragment.hpp  shuffled_keys_fragment.cpp  shuffled_keys_fragment.hpp
src/fragments/f_main/: f_main.cpp  f_main.hpp  f_main_spec.hpp
src/fragments/f_main/f_about_dialog/: f_about_dialog.cpp  f_about_dialog.hpp  f_about_dialog_spec.hpp
src/fragments/f_main/f_app_dialog/: f_app_dialog.cpp  f_app_dialog.hpp  f_app_dialog_spec.hpp
src/fragments/f_main/f_calculator/: f_calculator.cpp  f_calculator.hpp  f_calculator_spec.hpp
src/fragments/f_main/f_countdown_to_start/: f_countdown_to_start.cpp  f_countdown_to_start.hpp  f_countdown_to_start_spec.hpp
src/fragments/f_main/f_desktop/: desktop_icon.cpp  desktop_icon.hpp  f_desktop.cpp  f_desktop.hpp  f_desktop_spec.hpp
src/fragments/f_main/f_login_screen/: f_login_screen.cpp  f_login_screen.hpp
src/fragments/f_main/f_mail_client/: f_mail_client.cpp  f_mail_client.hpp
src/fragments/f_main/f_maze_3d/: f_maze_3d.cpp  f_maze_3d_spec.hpp
src/fragments/f_main/f_menu_bar/: f_menu_bar.cpp  f_menu_bar.hpp  f_menu_bar_spec.hpp
src/fragments/f_main/f_normal_calc_about_dialog/: f_normal_calc_about_dialog.cpp  f_normal_calc_about_dialog.hpp  f_normal_calc_about_dialog_spec.hpp
src/fragments/f_main/f_preferences_dialog/: f_preferences_dialog.cpp  f_preferences_dialog.hpp  f_preferences_dialog_spec.hpp
src/fragments/f_main/f_settings_dialog/: f_settings_dialog.cpp  f_settings_dialog.hpp  f_settings_dialog_spec.hpp
src/fragments/relocatable/: widget_frag_data.hpp
src/fragments/specs/: calculator_fragment_spec.hpp  main_fragment_spec.hpp  normal_calculator_fragment_spec.hpp  times_opened_counter_fragment_spec.hpp
src/raycast/: agent_system.cpp  agent_system.hpp  animation_system.cpp  animation_system.hpp  audio_service.cpp  audio_service.hpp  behaviour_system.cpp  behaviour_system.hpp  c_door_behaviour.cpp  c_door_behaviour.hpp  c_elevator_behaviour.cpp  c_elevator_behaviour.hpp  c_enemy_behaviour.cpp  c_enemy_behaviour.hpp  c_player_behaviour.cpp  c_player_behaviour.hpp  c_sound_source_behaviour.cpp  c_sound_source_behaviour.hpp  c_switch_behaviour.cpp  c_switch_behaviour.hpp  camera.cpp  camera.hpp  component.cpp  component.hpp  component_kinds.hpp  damage_system.cpp  damage_system.hpp  entity_manager.cpp  entity_manager.hpp  event_handler_system.cpp  event_handler_system.hpp  focus_system.cpp  focus_system.hpp  game_event.hpp  game_object_factory.hpp  geometry.cpp  geometry.hpp  geometry_factory.cpp  geometry_factory.hpp  inventory_system.cpp  (+34 more)
src/states/: danger_infinity_state.hpp  main_state.hpp  normal_calculator_state.hpp  shuffled_keys_state.hpp  st_a_simple_favour.hpp  st_are_you_sure.hpp  st_back_to_normal.hpp  st_clippys_revenge.hpp  st_danger_infinity.hpp  st_doomsweeper.hpp  st_going_in_circles.hpp  st_its_raining_tetrominos.hpp  st_limbo.hpp  st_login_screen.hpp  st_making_progress.hpp  st_millennium_bug.hpp  st_normal_calc.hpp  st_office_assistant.hpp  st_raycast.hpp  st_shuffled_keys.hpp  st_suicide_mission.hpp  st_t_minus_2_minutes.hpp  st_t_minus_two_minutes.hpp  st_test.hpp  st_youve_got_mail.hpp
src/views/: calculator_view.cpp  calculator_view.hpp  main_view.cpp  main_view.hpp  normal_calculator_view.cpp  normal_calculator_view.hpp  shuffled_keys_view.cpp  shuffled_keys_view.hpp
steam/: app_build_914430.vdf  depot_build_linux_914432.vdf  depot_build_osx_914433.vdf  depot_build_windows_914431.vdf
tests/: CMakeLists.txt
tests/src/: geometry_test.cpp  lines_test.cpp  map_parser_test.cpp  renderer_test.cpp  spatial_system_test.cpp  utils_test.cpp
tools/: CMakeLists.txt
tools/gibberish/: CMakeLists.txt
tools/gibberish/src/: main.cpp
tools/noise/: CMakeLists.txt
tools/noise/src/: main.cpp
vagrant/xenial64/: Vagrantfile  bootstrap.sh
vagrant/xenial64_clean/: Vagrantfile  bootstrap.sh
vagrant/xenial64_dev/: .gitignore  Vagrantfile  bootstrap.sh
windows/: .gitignore  data.wxs  dpi_unaware.manifest  libs.wxs  procalc.wxs
(+248 files in other folders)
